# risor

./: .codecov.yml  .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RISOR_V2_PLAN.md  VISION.md  compile_test.go  docs.go  docs_test.go  error-shortcomings.md  go.mod  go.sum  go.work  go.work.sum  llms.txt  program.go  program_test.go  risor.go  risor_config.go  risor_globals.go  risor_issues_test.go  risor_options.go  risor_test.go  syntax_test.go  tag.sh  vm_wrapper.go
arg/: args_test.go
ast/: ast.go  ast_test.go  expressions.go  literals.go  program.go  statements.go  walk.go  (+1 more)
implementations/rust/: .gitignore  Cargo.toml
implementations/rust/crates/risor/: Cargo.toml
implementations/rust/crates/risor-bytecode/: Cargo.toml
implementations/rust/crates/risor-bytecode/src/: code.rs  lib.rs  opcode.rs
implementations/rust/crates/risor-cli/: Cargo.toml
implementations/rust/crates/risor-cli/src/: main.rs
implementations/rust/crates/risor-compiler/: Cargo.toml
implementations/rust/crates/risor-compiler/src/: compiler.rs  lib.rs  symbol_table.rs
implementations/rust/crates/risor-lexer/: Cargo.toml
implementations/rust/crates/risor-lexer/src/: lexer.rs  lib.rs  token.rs
implementations/rust/crates/risor-parser/: Cargo.toml
implementations/rust/crates/risor-parser/src/: ast.rs  lib.rs  parser.rs  precedence.rs
implementations/rust/crates/risor-vm/: Cargo.toml
implementations/rust/crates/risor-vm/src/: builtins.rs  frame.rs  lib.rs  object.rs  vm.rs
implementations/rust/crates/risor/src/: lib.rs
(+596 files in other folders)
