[package]
name = "risor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fast, embedded scripting language for Rust"

[dependencies]
risor-bytecode = { path = "../risor-bytecode" }
risor-compiler = { path = "../risor-compiler" }
risor-lexer = { path = "../risor-lexer" }
risor-parser = { path = "../risor-parser" }
risor-vm = { path = "../risor-vm" }
